...
                                <connections>
                                    <action selector="resetPoker:" destination="idn-LO-RIm" eventType="touchUpInside" id="spu-Qq-Okk"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="SelectHandView"/>
                        <constraints>
                            <constraint firstItem="11D-Ve-vtC" firstAttribute="trailing" secondItem="jnD-bf-2iA" secondAttribute="trailing" constant="24" id="9op-HG-WQj"/>
                            <constraint firstItem="Kvc-vt-Y36" firstAttribute="leading" secondItem="11D-Ve-vtC" secondAttribute="leading" constant="65" id="BFB-fL-Mge"/>
                            <constraint firstItem="Rhg-Af-3UX" firstAttribute="trailing" secondItem="11D-Ve-vtC" secondAttribute="trailing" id="GKs-b0-0u6"/>
                            <constraint firstAttribute="bottomMargin" secondItem="Rhg-Af-3UX" secondAttribute="bottom" constant="-34" id="GON-0a-cHM"/>
                            <constraint firstItem="Tgw-xJ-lFz" firstAttribute="top" secondItem="jxU-5z-92z" secondAttribute="bottom" constant="56" id="IEX-HT-0i7"/>
...
                                <rect key="frame" x="45" y="107" width="40" height="88"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="88" id="3CX-Rs-RDv"/>
                                    <constraint firstAttribute="width" constant="40" id="dqp-Po-ouc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="HELP">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="G3f-nV-ybQ" kind="show" id="sYn-Il-nvZ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypu-6m-9ND">
                                <rect key="frame" x="322" y="111" width="49" height="80"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="ADD">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="addButtonTapped:" destination="SM8-hW-WDe" eventType="touchUpInside" id="pNS-YE-149"/>
                                </connections>
                            </button>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lv" translatesAutoresizingMaskIntoConstraints="NO" id="tmL-wS-ZgT">
                                <rect key="frame" x="-8" y="38" width="422" height="858"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="poker-hand-rankings" translatesAutoresizingMaskIntoConstraints="NO" id="3Vv-w6-7PP">
                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                <accessibility key="accessibilityConfiguration" identifier="HelpImage"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="774" id="DD7-R5-uAz"/>
                                    <constraint firstAttribute="width" constant="414" id="PS4-SQ-Ki5"/>
                                </constraints>
                            </imageView>
                        </subviews>
...
                                <connections>
                                    <action selector="ResetButton:" destination="7v9-WN-a9F" eventType="touchUpInside" id="ilr-Kr-kpl"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="SelectCardView"/>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstItem="Yde-vQ-Syg" firstAttribute="top" secondItem="ZTz-f1-Vns" secondAttribute="bottom" constant="242" id="8R4-Ih-46K"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Nv8-Nh-2RZ" secondAttribute="trailing" constant="-35" id="8ZP-UI-ZQm"/>
                            <constraint firstItem="j1v-XY-HQQ" firstAttribute="centerX" secondItem="Yde-vQ-Syg" secondAttribute="centerX" id="DKS-O4-4Vu"/>
                            <constraint firstItem="yXQ-RL-8Un" firstAttribute="leading" secondItem="MiY-iX-SWe" secondAttribute="leading" constant="65" id="FOR-kt-kO3"/>
...
